force-app/main/default/objects/Repository__c/fields/Opportunity_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity RecordType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>