force-app/main/default/objects/Repository__c/fields/Rep_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Rep_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repositories</relationshipLabel>
    <relationshipName>Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>