force-app/main/default/objects/Repository__c/fields/Rep_BankId__c.field-meta.xml
<CustomField>
    <fullName>Rep_BankId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>