force-app/main/default/objects/Repository__c/fields/Rep_BusinessActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_BusinessActual__c</fullName>
    <label>Business Loan Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>