force-app/main/default/objects/Repository__c/fields/Rep_BusinessCentre__c.field-meta.xml
<CustomField>
    <fullName>Rep_BusinessCentre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Centre</label>
    <length>220</length>
    <type>Text</type>
</CustomField>