force-app/main/default/objects/Repository__c/fields/Rep_BusinessCentreId__c.field-meta.xml
<CustomField>
    <fullName>Rep_BusinessCentreId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Centre Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>