force-app/main/default/objects/Repository__c/fields/Rep_CombineId__c.field-meta.xml
<CustomField>
    <fullName>Rep_CombineId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Combine Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>