force-app/main/default/objects/Repository__c/fields/Rep_CommodityActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_CommodityActual__c</fullName>
    <label>Commodity Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>