force-app/main/default/objects/Repository__c/fields/Rep_DealLastDate__c.field-meta.xml
<CustomField>
    <fullName>Rep_DealLastDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Last Dealt</label>
    <type>Date</type>
</CustomField>