force-app/main/default/objects/Repository__c/fields/Rep_DealsCurr__c.field-meta.xml
<CustomField>
    <fullName>Rep_DealsCurr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deals This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>