force-app/main/default/objects/Repository__c/fields/Rep_DealsYOY__c.field-meta.xml
<CustomField>
    <fullName>Rep_DealsYOY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YoY Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>