force-app/main/default/objects/Repository__c/fields/Rep_DefaultEvent__c.field-meta.xml
<CustomField>
    <fullName>Rep_DefaultEvent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>