force-app/main/default/objects/Repository__c/fields/Rep_DivisionId__c.field-meta.xml
<CustomField>
    <fullName>Rep_DivisionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>