force-app/main/default/objects/Repository__c/fields/Rep_DivisionName__c.field-meta.xml
<CustomField>
    <fullName>Rep_DivisionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>