force-app/main/default/objects/Repository__c/fields/Rep_ETBranchNumber__c.field-meta.xml
<CustomField>
    <fullName>Rep_ETBranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>