force-app/main/default/objects/Repository__c/fields/Rep_FX_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rep_FX_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Manager</label>
    <length>220</length>
    <type>Text</type>
</CustomField>