force-app/main/default/objects/Repository__c/fields/Rep_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_FXDirectActual__c</fullName>
    <label>FX Direct Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>