force-app/main/default/objects/Repository__c/fields/Rep_FXIndirectActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_FXIndirectActual__c</fullName>
    <label>FX Indirect Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>