force-app/main/default/objects/Repository__c/fields/Rep_FXSalesMargin__c.field-meta.xml
<CustomField>
    <fullName>Rep_FXSalesMargin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Sales Margin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>