force-app/main/default/objects/Repository__c/fields/Rep_GroupId__c.field-meta.xml
<CustomField>
    <fullName>Rep_GroupId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>