force-app/main/default/objects/Repository__c/fields/Rep_IRRMActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_IRRMActual__c</fullName>
    <label>IRRM Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>