force-app/main/default/objects/Repository__c/fields/Rep_MarginCurr__c.field-meta.xml
<CustomField>
    <fullName>Rep_MarginCurr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin This Year %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>