force-app/main/default/objects/Repository__c/fields/Rep_MarginLast__c.field-meta.xml
<CustomField>
    <fullName>Rep_MarginLast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin Last Year %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>