force-app/main/default/objects/Repository__c/fields/Rep_MarginYOY__c.field-meta.xml
<CustomField>
    <fullName>Rep_MarginYOY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YoY Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>