force-app/main/default/objects/Repository__c/fields/Rep_Month__c.field-meta.xml
<CustomField>
    <fullName>Rep_Month__c</fullName>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>