force-app/main/default/objects/Repository__c/fields/Rep_MonthText__c.field-meta.xml
<CustomField>
    <fullName>Rep_MonthText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>