force-app/main/default/objects/Repository__c/fields/Rep_PMName__c.field-meta.xml
<CustomField>
    <fullName>Rep_PMName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PM</label>
    <length>240</length>
    <type>Text</type>
</CustomField>