force-app/main/default/objects/Repository__c/fields/Rep_PrimaryAmount__c.field-meta.xml
<CustomField>
    <fullName>Rep_PrimaryAmount__c</fullName>
    <label>Primary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>