force-app/main/default/objects/Repository__c/fields/Rep_PrimaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>Rep_PrimaryCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>