force-app/main/default/objects/Repository__c/fields/Rep_Q6Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Q6Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Q6 Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>