force-app/main/default/objects/Repository__c/fields/Rep_RegionId__c.field-meta.xml
<CustomField>
    <fullName>Rep_RegionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>