force-app/main/default/objects/Repository__c/fields/Rep_RegionName__c.field-meta.xml
<CustomField>
    <fullName>Rep_RegionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>