force-app/main/default/objects/Repository__c/fields/Rep_RetailActual__c.field-meta.xml
<CustomField>
    <fullName>Rep_RetailActual__c</fullName>
    <label>Retail Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>