force-app/main/default/objects/Repository__c/fields/Rep_RMId__c.field-meta.xml
<CustomField>
    <fullName>Rep_RMId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>