force-app/main/default/objects/Repository__c/fields/Rep_RMName__c.field-meta.xml
<CustomField>
    <fullName>Rep_RMName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>