force-app/main/default/objects/Repository__c/fields/Rep_SecondaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>Rep_SecondaryCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>