force-app/main/default/objects/Repository__c/fields/Rep_SFID__c.field-meta.xml
<CustomField>
    <fullName>Rep_SFID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>