force-app/main/default/objects/Repository__c/fields/Rep_TOCurr__c.field-meta.xml
<CustomField>
    <fullName>Rep_TOCurr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>T/O This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>