force-app/main/default/objects/Repository__c/fields/Rep_TOLast__c.field-meta.xml
<CustomField>
    <fullName>Rep_TOLast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>T/O Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>