force-app/main/default/objects/Repository__c/fields/Rep_TOYOY__c.field-meta.xml
<CustomField>
    <fullName>Rep_TOYOY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YoY T/O</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>