force-app/main/default/objects/Repository__c/fields/Rep_TSMName__c.field-meta.xml
<CustomField>
    <fullName>Rep_TSMName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FRSM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>