force-app/main/default/objects/Repository__c/fields/Rep_WID__c.field-meta.xml
<CustomField>
    <fullName>Rep_WID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>