force-app/main/default/objects/Repository__c/fields/TSMId__c.field-meta.xml
<CustomField>
    <fullName>TSMId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FRSM Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>