force-app/main/default/objects/Repository__c/fields/YOY__c.field-meta.xml
<CustomField>
    <fullName>YOY__c</fullName>
    <formula>Rep_MarginCurr__c  -  Rep_MarginLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>