force-app/main/default/objects/Repository__c/recordTypes/BankAndGroup.recordType-meta.xml
<RecordType>
    <fullName>BankAndGroup</fullName>
    <active>true</active>
    <label>BankAndGroup</label>
</RecordType>