force-app/main/default/objects/Repository__c/recordTypes/BusinessAndCustomer.recordType-meta.xml
<RecordType>
    <fullName>BusinessAndCustomer</fullName>
    <active>true</active>
    <label>BusinessAndCustomer</label>
</RecordType>