force-app/main/default/objects/Repository__c/recordTypes/BusinessAndRM.recordType-meta.xml
<RecordType>
    <fullName>BusinessAndRM</fullName>
    <active>true</active>
    <label>BusinessAndRM</label>
</RecordType>