force-app/main/default/objects/Repository__c/recordTypes/BusinessAndTSM.recordType-meta.xml
<RecordType>
    <fullName>BusinessAndTSM</fullName>
    <active>true</active>
    <label>BusinessAndTSM</label>
</RecordType>