force-app/main/default/objects/Repository__c/recordTypes/CustomerAndPM.recordType-meta.xml
<RecordType>
    <fullName>CustomerAndPM</fullName>
    <active>true</active>
    <label>CustomerAndPM</label>
</RecordType>