force-app/main/default/objects/Repository__c/recordTypes/CustomerAndProduct.recordType-meta.xml
<RecordType>
    <fullName>CustomerAndProduct</fullName>
    <active>true</active>
    <label>Customer And Product</label>
</RecordType>