force-app/main/default/objects/Repository__c/recordTypes/CustomerAndTSM.recordType-meta.xml
<RecordType>
    <fullName>CustomerAndTSM</fullName>
    <active>true</active>
    <label>CustomerAndTSM</label>
</RecordType>