force-app/main/default/objects/Repository__c/recordTypes/CustomerAndTSMFXD.recordType-meta.xml
<RecordType>
    <fullName>CustomerAndTSMFXD</fullName>
    <active>true</active>
    <label>CustomerAndTSMFXD</label>
</RecordType>