force-app/main/default/objects/Repository__c/recordTypes/DivisionAndRegion.recordType-meta.xml
<RecordType>
    <fullName>DivisionAndRegion</fullName>
    <active>true</active>
    <label>DivisionAndRegion</label>
</RecordType>