force-app/main/default/objects/Repository__c/recordTypes/EventAndTask.recordType-meta.xml
<RecordType>
    <fullName>EventAndTask</fullName>
    <active>true</active>
    <label>Event and Task</label>
</RecordType>