force-app/main/default/objects/Repository__c/recordTypes/GroupAndDivision.recordType-meta.xml
<RecordType>
    <fullName>GroupAndDivision</fullName>
    <active>true</active>
    <label>GroupAndDivision</label>
</RecordType>