force-app/main/default/objects/Repository__c/recordTypes/RegionAndBusiness.recordType-meta.xml
<RecordType>
    <fullName>RegionAndBusiness</fullName>
    <active>true</active>
    <label>RegionAndBusiness</label>
</RecordType>